# nouveau-site-KIRO-

./: .env  .gitignore  README  README.md  docker-compose-prod.yaml  docker-compose.yaml  docker-compose.yml  user_journey.md  user_story.md
back/: .dockerignore  Dockerfile  db.sqlite3  entrypoint-prod.sh  manage.py  pyproject.toml
back/api/: admin.py  models.py  serializer.py  urls.py  views.py
back/api/migrations/: 0001_initial.py  0002_alter_student_school_invitation.py  0002_alter_student_team.py  0003_alter_student_school_alter_student_team.py  0004_student_school_year_user_phone_number.py  0005_alter_student_options_alter_teacher_options_and_more.py
back/back/: asgi.py  auth.py  celery.py  settings.py  urls.py  views.py  wsgi.py
back/back/templates/registration/: login.html  register.html
back/profile/: apps.py  serializer.py  urls.py  views.py
back/profile/templates/profile/: accueil.html  leaderboard.html  password.html  profile.html  profile_edit.html  profile_student.html  profile_user.html  team.html  team_creator.html  team_edit.html  team_member.html  team_register.html  team_viewer.html  teams_list.html
front/: .babelrc  Dockerfile  install-frontend-dev.sh  package-lock.json  package.json  tsconfig.json  webpack.config.js
front/src/: App.js  index.js
front/src/auth/: AuthContext.js
front/src/components/: Login.js  Navbar.js  RegisterForm.js
front/src/containers/: HomePage.js  Register.js
nginx/: nginx.conf
scripts/: build.sh  start.sh  stop.sh
webinstaller/: Dockerfile  install-frontend-dev.sh  install-frontend-prod.sh
(+5 files in other folders)
